# extractive_summary_validator

./: README.md  pyproject.toml
test/: sample-bad-summary.txt  sample-doc.txt  sample-good-summary.txt  test-validator.py
validator/: __init__.py  main.py
